force-app/main/default/objects/AmenityMaintenance__c/AmenityMaintenance__c.object-meta.xml
<CustomObject>
    <label>Amenity Maintenance</label>
    <nameField>
        <label>Amenity Day Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amenity Maintenances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>