force-app/main/default/objects/AmenityMaintenance__c/fields/Amenities__c.field-meta.xml
<CustomField>
    <fullName>Amenities__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Amenities</label>
    <referenceTo>Amenities__c</referenceTo>
    <relationshipLabel>Amenity Maintenances</relationshipLabel>
    <relationshipName>Amenity_Maintenances</relationshipName>
    <type>Lookup</type>
</CustomField>