force-app/main/default/objects/AmenityMaintenance__c/fields/durationHours__c.field-meta.xml
<CustomField>
    <fullName>durationHours__c</fullName>
    <label>Duration Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>