force-app/main/default/objects/AmenityMaintenance__c/fields/endTime__c.field-meta.xml
<CustomField>
    <fullName>endTime__c</fullName>
    <label>End Time</label>
    <type>Time</type>
</CustomField>