force-app/main/default/objects/AmenityMaintenance__c/fields/maintenanceDate__c.field-meta.xml
<CustomField>
    <fullName>maintenanceDate__c</fullName>
    <label>Maintenance Date</label>
    <type>Date</type>
</CustomField>