force-app/main/default/objects/AmenityMaintenance__c/fields/startTime__c.field-meta.xml
<CustomField>
    <fullName>startTime__c</fullName>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>